# event-driven-crypto-pipeline

./: .env.example  .gitignore  README.md  TASK_PLAN.md  main.py  prd_kafka_streaming_pipeline.md  pyproject.toml
api/: main.py
api/routes/: indicators.py
core/binance/: ws_client.py
core/cache/: redis_client.py
core/db/: postgres.py
core/kafka/: admin.py  consumer.py  producer.py  schemas.py
core/metrics/: metrics.py  server.py
core/settings/: settings.py
core/utils/: logger.py
docker/: docker-compose.yml
docker/grafana/dashboards/: pipeline.json
docker/grafana/provisioning/dashboards/: dashboard.yml
docker/prometheus/: prometheus.yml
infra/kafka/: topics.py
scripts/: create_topics.py  replay.py
src/consumers/cache/: cache_consumer.py
src/consumers/candles/: candle_1m_consumer.py  candle_1s_consumer.py
src/consumers/indicators/: indicators_1m_consumer.py  indicators_1s_consumer.py
src/consumers/storage/: candle_storage_consumer.py  indicator_storage_consumer.py
src/producers/market_data/: mapper.py  producer.py
src/services/: candle_service.py  indicator_service.py  selector_service.py
tests/integration/: test_api.py  test_cache_consumer.py  test_producer_consumer.py  test_storage_consumer.py
tests/unit/producers/: test_mapper.py
tests/unit/services/: test_candle_service.py  test_indicator_service.py  test_selector_service.py
