[project]
name = "event-driven-crypto-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "websockets>=16.0",
    "aiokafka>=0.12.0",
    "redis>=5.0.0",
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "TA-Lib>=0.4.0",
    "numpy>=1.26.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "prometheus-client>=0.21.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
